--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "worker-loader": "^3.0.8"
   },
   "scripts": {
